# exvisit

./: .gitattributes  .gitignore  MANIFEST.in  README.md  benchmark.md  pyproject.toml  research.md  run_sonnet_exvisit.sh  setup.md  status.md  vision.md
.cursor/: mcp.json
.github/workflows/: publish.yml  release.yml  rust-mcp-release.yml  rust-release.yml
bench/: __init__.py  __main__.py  analyze_run.py  blast_quality.py  cases_dump.json  check_progress.py  copilot_nav.py  dataset.py  driver_prompt.md  dump_cases.py  evaluate.py  exvisit_edit.py  exvisit_nav.py  harness.py  metrics.py  mini_swe_agent.py  prepare.py  run_bench.py  runner_agent.py  swebench_lite_harness.py  token_bench.py
bench/results/: exvisit_nav_qwen-qwen3-coder_1777099156.report.md
config/: blast_betas.json  blast_presets.json  pricing_sonnet.json
examples/: myslicer.exv  myslicer.generated.atlas
exvisit/: __init__.py  anchor.py  ast.py  blast.py  cli.py  crdt.py  edit_tool.py  graph_meta.py  parser.py  query.py  scaffold.py  scoring_v2.py  serialize.py  spatial.py  verify.py
exvisit/_data/: __init__.py  blast_betas.json  blast_presets.json
npm/: install.js  package.json  run.js
reports/: experience_report.md  research_2026-04-22.md  spec_sheet.md
reports/myslicerapp_stress/: MySlicerApp.exv  results.json  summary.md
rust/: Cargo.toml
rust/crates/exvisit-core/: Cargo.toml
rust/crates/exvisit-core/src/: ast.rs  crdt.rs  exvisit.pest  lib.rs  parser.rs  serialize.rs  spatial.rs  topology.rs
rust/crates/exvisit-lsp/: Cargo.toml
rust/crates/exvisit-lsp/src/: main.rs
rust/crates/exvisit-mcp/: Cargo.toml  PLAN.md
rust/crates/exvisit-mcp/src/: main.rs
rust/crates/exvisit-query/: Cargo.toml
rust/crates/exvisit-query/src/: main.rs
rust/crates/exvisit-viewport/: Cargo.toml
rust/crates/exvisit-viewport/src/: grid.wgsl  lib.rs
spec/: exvisit-dsl-v0.1.md  exvisit-dsl-v0.4-draft.md
tests/: test_blast.py  test_exvisit.py  test_exvisit_edit.py  test_mini_swe_agent.py  test_runner_agent.py  test_scoring_v2.py  test_swebench_harness.py
