[workspace]
members = [
    "crates/exvisit-core",
    "crates/exvisit-query",
    "crates/exvisit-mcp",
    "crates/exvisit-lsp",
    "crates/exvisit-viewport",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/exvisit-pro/exvisit"
rust-version = "1.75"

[workspace.dependencies]
pest            = "2.7"
pest_derive     = "2.7"
rstar           = "0.12"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
anyhow          = "1"
thiserror       = "1"
clap            = { version = "4", features = ["derive"] }
tokio           = { version = "1", features = ["full"] }
tower-lsp       = "0.20"
jsonrpsee       = { version = "0.22", features = ["server"] }
wgpu            = "0.20"
wasm-bindgen    = "0.2"
log             = "0.4"
env_logger      = "0.11"

