[package]
name = "exvisit-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Spatial constraint LSP — Phase 4."

[dependencies]
exvisit-core = { path = "../exvisit-core" }
tower-lsp  = { workspace = true }
tokio      = { workspace = true }
anyhow     = { workspace = true }

[[bin]]
name = "exvisit-lsp"
path = "src/main.rs"

