[package]
name = "exvisit-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP JSON-RPC architect server — Phase 3."

[dependencies]
exvisit-core = { path = "../exvisit-core" }
jsonrpsee  = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }

[[bin]]
name = "exvisit-mcp"
path = "src/main.rs"

