[package]
name = "exvisit-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP stdio server — wraps the Python exv CLI via subprocess."

[dependencies]
rmcp       = { workspace = true }
tokio      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
log        = { workspace = true }
env_logger = { workspace = true }

[[bin]]
name = "exvisit-mcp"
path = "src/main.rs"

# cargo-dist: opt this specific crate into distribution (workspace default is false).
[package.metadata.dist]
dist = true

